telemetry magic
